[gd_scene load_steps=35 format=3 uid="uid://ciqrpd5675boy"]

[ext_resource type="Script" path="res://Scenes/entity/playerlikeentity/player/player_controller.gd" id="1_pdbxc"]
[ext_resource type="Shader" path="res://assets/shaders/silhouette.gdshader" id="2_u8xx4"]
[ext_resource type="Script" path="res://Scenes/entity/playerlikeentity/player/cameracontroller.gd" id="4_4nf07"]
[ext_resource type="Script" path="res://Scenes/entity/playerlikeentity/player/camera.gd" id="5_17a44"]
[ext_resource type="PackedScene" uid="uid://todqitbbpsq2" path="res://Scenes/online_ui/chat.tscn" id="5_ru1qw"]
[ext_resource type="Texture2D" uid="uid://ftmvsa1w2575" path="res://assets/sprites/prototype_player_sprite_sheet.png" id="6_y2nmv"]
[ext_resource type="Texture2D" uid="uid://djv1byov750hr" path="res://assets/sprites/player/body/body1.png" id="7_wvrsv"]
[ext_resource type="Texture2D" uid="uid://d2uberku7qua3" path="res://assets/sprites/player/eyeL/eyeL1.png" id="8_fy1yi"]
[ext_resource type="Texture2D" uid="uid://bd7v8cahvi5x7" path="res://assets/sprites/player/eyeR/eyeR1.png" id="9_qmxkr"]
[ext_resource type="Texture2D" uid="uid://dcbu0jpu2xg0v" path="res://assets/sprites/player/shirt/shirt1.png" id="10_7ggrc"]
[ext_resource type="Texture2D" uid="uid://8pskuo8pv8sn" path="res://assets/sprites/player/pants/pants1.png" id="11_hu6la"]
[ext_resource type="Texture2D" uid="uid://dw0tmireiw4tw" path="res://assets/sprites/player/shoes/shoes1.png" id="12_0rqtq"]
[ext_resource type="Texture2D" uid="uid://ddvpe40uedl77" path="res://assets/sprites/player/hair/hair1.png" id="13_ni05e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4goit"]
shader = ExtResource("2_u8xx4")
shader_parameter/silouette_color = Color(0, 0, 0, 0.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7fhl"]
atlas = ExtResource("6_y2nmv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ofx5"]
atlas = ExtResource("6_y2nmv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1k6d"]
atlas = ExtResource("6_y2nmv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ccqx"]
atlas = ExtResource("6_y2nmv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tpqe"]
atlas = ExtResource("6_y2nmv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5en1f"]
atlas = ExtResource("6_y2nmv")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k74jh"]
atlas = ExtResource("6_y2nmv")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgbd2"]
atlas = ExtResource("6_y2nmv")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urha3"]
atlas = ExtResource("6_y2nmv")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ng06"]
atlas = ExtResource("6_y2nmv")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv1f6"]
atlas = ExtResource("6_y2nmv")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nchbr"]
atlas = ExtResource("6_y2nmv")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6ho0"]
atlas = ExtResource("6_y2nmv")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3cbi"]
atlas = ExtResource("6_y2nmv")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n04ha"]
atlas = ExtResource("6_y2nmv")
region = Rect2(448, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ax11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7fhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ofx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1k6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ccqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tpqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5en1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k74jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgbd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urha3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ng06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv1f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nchbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6ho0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3cbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n04ha")
}],
"loop": true,
"name": &"still",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_840qo"]
size = Vector2(10, 4)

[sub_resource type="Animation" id="Animation_icpgd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/eyeL:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/eyeR:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/shirt:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton/pants:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton/shoes:frame_coords")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Skeleton/hair:frame_coords")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_vcbo3"]
resource_name = "idle_down"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0), Vector2i(11, 0), Vector2i(12, 0), Vector2i(13, 0), Vector2i(14, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/eyeL:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0), Vector2i(11, 0), Vector2i(12, 0), Vector2i(13, 0), Vector2i(14, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/eyeR:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0), Vector2i(11, 0), Vector2i(12, 0), Vector2i(13, 0), Vector2i(14, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/shirt:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0), Vector2i(11, 0), Vector2i(12, 0), Vector2i(13, 0), Vector2i(14, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton/pants:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0), Vector2i(11, 0), Vector2i(12, 0), Vector2i(13, 0), Vector2i(14, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton/shoes:frame_coords")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0), Vector2i(11, 0), Vector2i(12, 0), Vector2i(13, 0), Vector2i(14, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Skeleton/hair:frame_coords")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0), Vector2i(11, 0), Vector2i(12, 0), Vector2i(13, 0), Vector2i(14, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mn87n"]
_data = {
"RESET": SubResource("Animation_icpgd"),
"idle_down": SubResource("Animation_vcbo3")
}

[node name="Player" type="CharacterBody2D" groups=["damageables"]]
z_index = 1
y_sort_enabled = true
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_pdbxc")
move_speed = null
acceleration = null
stopping_speed = null

[node name="SilhouetteSprite" type="Sprite2D" parent="."]
z_index = 100
material = SubResource("ShaderMaterial_4goit")

[node name="CameraController" type="Node2D" parent="."]
script = ExtResource("4_4nf07")

[node name="Camera" type="Camera2D" parent="CameraController"]
zoom = Vector2(3, 3)
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true
script = ExtResource("5_17a44")

[node name="Chat" parent="CameraController" instance=ExtResource("5_ru1qw")]
offset_left = -192.0
offset_top = -108.0
offset_right = -192.0
offset_bottom = -108.0
scale = Vector2(0.25, 0.25)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_3ax11")
animation = &"still"
autoplay = "still"
frame_progress = 0.266905

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_840qo")

[node name="Skeleton" type="Node2D" parent="."]

[node name="body" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("7_wvrsv")
hframes = 16

[node name="eyeL" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("8_fy1yi")
hframes = 16

[node name="eyeR" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("9_qmxkr")
hframes = 16

[node name="shirt" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("10_7ggrc")
hframes = 16

[node name="pants" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("11_hu6la")
hframes = 16

[node name="shoes" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("12_0rqtq")
hframes = 16

[node name="hair" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("13_ni05e")
hframes = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mn87n")
}
speed_scale = 0.8
